RPP: fix bugs with timespan breakdown overlays
This CL started out as a bug to fix the visual display of timespan
breakdowns with an odd number of phases (e.g. INP breakdown) where the
wrong sections were visually rendered higher.

This CL fixes that, but also a bug I found where the component would not
update and re-render correctly when you interact with it via the Insight
Table component in the UI. The problem was that hovering on the
component would update the overlay, but the code to set the width of the
overlay sections would run before the overlay had been given the up to
date sections. Therefore the widths would not be set correctly and the
overlay sections would have incorrect widths.

To fix this, I updated the update() process for overlays. It's now done
in 3 steps:

1. before positioning hook - this is where you can update an overlay
   with the new data
2. position overlay - this is where the new overlay is positioned
3. after positioning hook - is this where an overlay can run any code it
   needs to run after it's been put into its new place

Now, with this structure, we update the timespan breakdown sections in
(1), so that the position code in (2) runs with the latest data, and
then in (3) we just check the label visibility.

I also introduced a wait for `coordinator.done()` as we use scheduled
rendering within the components. I don't think this will impact the
responsiveness of the overlays because we don't do any overlay
re-rendering when the user is scrolling/panning. If this does, we can
remove this `await` and instead update the components to just render
directly without scheduling, which will be fine as long as we ensure
data has changed before triggering a render.

Bug: 371140062
Change-Id: I3c89cb44919b040b4902e6016509af88f52b044c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5904929
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adr

--- a/front_end/panels/timeline/overlays/components/timespanBreakdownOverlay.css
+++ b/front_end/panels/timeline/overlays/components/timespanBreakdownOverlay.css
@@ -4,16 +4,6 @@
  * found in the LICENSE file.
  */
 
-:host {
-  display: flex;
-  overflow: hidden;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: flex-end;
-  width: 100%;
-  box-sizing: border-box;
-}
-
 .timespan-breakdown-overlay-section {
   border: solid;
   border-color: var(--sys-color-on-surface);
@@ -27,22 +17,51 @@
   text-overflow: ellipsis;
   background-image: linear-gradient(180deg, var(--sys-color-on-primary), transparent);
   height: 90px;
+}
 
-  &:nth-child(odd) {
+:host {
+  display: flex;
+  overflow: hidden;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+  width: 100%;
+  box-sizing: border-box;
+
+  /* Ensure that the first & last sections always have the left/right border */
+  /* (disable stylelint because we need the !important to override border
+   * styles below + keeping them here is clearer to read) */
+  .timespan-breakdown-overlay-section:first-child {
+    border-left-width: 1px !important; /* stylelint-disable-line declaration-no-important */
+  }
+
+  .timespan-breakdown-overlay-section:last-child {
+    border-right-width: 1px !important; /* stylelint-disable-line declaration-no-important */
+  }
+}
+
+/* Depending on if the number of sections is odd or even, we alternate the
+ * heights of the even/odd sections. We do this to ensure that the first item
+ * is never a "high" item, because that looks a bit clunky. */
+:host(.odd-number-of-sections) {
+  .timespan-breakdown-overlay-section:nth-child(even) {
     height: 100px;
   }
 
-  &:nth-child(even) {
+  .timespan-breakdown-overlay-section:nth-child(odd) {
     border-left-width: 0;
     border-right-width: 0;
   }
+}
 
-  &:first-child {
-    border-left-width: 1px;
+:host(.even-number-of-sections) {
+  .timespan-breakdown-overlay-section:nth-child(odd) {
+    height: 100px;
   }
 
-  &:last-child {
-    border-right-width: 1px;
+  .timespan-breakdown-overlay-section:nth-child(even) {
+    border-left-width: 0;
+    border-right-width: 0;
   }
 }
 
