RPP: fix top padding of feedback button
Otherwise with multiple navigations it is right up against the
navigation with no gap between.

Bug: none
Change-Id: If4293b3cdfc992801d392b1f0527712cfe84f222
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5904896
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/components/sidebarInsightsTab.css
+++ b/front_end/panels/timeline/components/sidebarInsightsTab.css
@@ -59,8 +59,7 @@
 
 .feedback-wrapper {
   position: relative;
-  padding-left: var(--sys-size-6);
-  padding-bottom: var(--sys-size-6);
+  padding: var(--sys-size-6);
 
   .tooltip {
     visibility: hidden;
