--- a/front_end/panels/timeline/timelineFlameChartView.css
+++ b/front_end/panels/timeline/timelineFlameChartView.css
@@ -116,7 +116,8 @@
 }
 
 .overlay-type-TIMESPAN_BREAKDOWN {
-  /* This overlay is shown at the bottom of the UI, not the top */
+  /* This overlay by default is shown at the bottom of the UI, not the top */
   top: unset;
   bottom: 0;
+  height: 100px;
 }
