[network] Fix confusing enabled/disabled states in Network Conditions.
Previously the state of the disabled/enabled parts of the Network
Conditions panel where a bit unclear. This CL does the following:

1. Consistent opacity of 38% for everything that's disabled. In
   particular we no longer stack 50% opacity on top of 38% opacity
   for the `<select>`s.
2. Disable pointer events and keyboard navigation consistently
   for everything that's disabled.
3. Remove an unnecessary container `<div>` to make reasoning about
   the DOM easier.

Fixed: 370443122
Change-Id: I3098fd20b03e001e7a034d50790e7d10f247d9e7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5909626
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Yang Guo <yangguo@chromium.org>

--- a/front_end/panels/network/networkConfigView.css
+++ b/front_end/panels/network/networkConfigView.css
@@ -85,6 +85,10 @@
 .network-config-ua .chrome-select {
   width: calc(100% - 20px);
   max-width: 250px;
+
+  &:disabled {
+    opacity: unset;
+  }
 }
 
 .network-config-ua span[is="dt-radio"] {
@@ -92,15 +96,18 @@
 }
 
 .network-config-ua-custom {
-  opacity: 50%;
   padding-bottom: 8px;
+  opacity: 38%;
+  pointer-events: none;
+
+  &.checked {
+    opacity: revert;
+    pointer-events: revert;
+  }
 }
 
-.network-config-ua-custom.checked {
-  opacity: 100%;
-}
-
-.client-hints-form {
+devtools-user-agent-client-hints-form {
+  display: block;
   margin-top: 14px;
   width: min(100%, 400px);
 }
