--- a/front_end/ui/legacy/checkboxTextLabel.css
+++ b/front_end/ui/legacy/checkboxTextLabel.css
@@ -34,6 +34,10 @@ input.inside-datagrid {
 .dt-checkbox-text {
   overflow: hidden;
   text-overflow: ellipsis;
+
+  input:disabled ~ & {
+    opacity: 38%;
+  }
 }
 
 .dt-checkbox-subtitle {
