[Freestyler] Add entry point floating button from Elements panel
Fixed: 369335943
Change-Id: I37af7cdca8516aca94e030024c5cb83d29f641db
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5904617
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/elements/elementsTreeOutline.css
+++ b/front_end/panels/elements/elementsTreeOutline.css
@@ -83,6 +83,19 @@
   margin-left: -12px;
 }
 
+.elements-disclosure li .ai-button-container {
+  display: none;
+  margin-left: 1ch;
+  overflow: visible;
+  max-height: var(--sys-size-6);
+  vertical-align: top;
+  margin-top: -1px;
+}
+
+.elements-disclosure .elements-tree-outline:not(.hide-selection-when-blurred) li.selected .ai-button-container {
+  display: inline-flex;
+}
+
 .elements-disclosure li .selected-hint::before {
   font-style: italic;
   content: " == $0";
