Disable stylelint specificity rule
It doesn't work as well with nested rules, and we were beginning to have
to disable it more and more. Chatted with the team and we agreed to
remove this rule.

Bug: none
Change-Id: I756030f97694590c3bb9667968bd49c8aa9e7bb5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5912715
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/network/networkLogView.css
+++ b/front_end/panels/network/networkLogView.css
@@ -165,10 +165,6 @@
   color: var(--sys-color-error);
 }
 
-/* We are using a multitude of different selector specificity rules here, which
-   is incompatible with what stylelint requires as ordering of the rules. */
-/* stylelint-disable no-descending-specificity */
-
 .network-log-grid.data-grid tr.selected,
 .network-log-grid.data-grid tr.selected .network-cell-subtitle,
 .network-log-grid.data-grid tr.selected .network-dim-cell {
@@ -198,8 +194,6 @@
 .network-log-grid tr.highlighted-row {
   animation: network-row-highlight-fadeout 2s 0s;
 }
-/* See comment above why the rules were disabled */
-/* stylelint-enable no-descending-specificity */
 
 @keyframes network-row-highlight-fadeout {
   from {
@@ -212,8 +206,8 @@
 }
 
 /* Resource preview icons */
-/* These rules are grouped by type and therefore do not adhere to the ordering of stylelint */
-/* stylelint-disable no-descending-specificity, no-duplicate-selectors */
+/* These rules are grouped by type */
+/* stylelint-disable no-duplicate-selectors */
 
 .network-log-grid.data-grid .icon.image {
   position: relative;
@@ -271,10 +265,9 @@
 .network-log-grid.data-grid .trailing-link-icon {
   padding-left: 0.5ex;
 }
-/* stylelint-enable no-descending-specificity, no-duplicate-selectors */
+/* stylelint-enable no-duplicate-selectors */
 /* This is part of the large color block declared above, but should not be
    extracted out. */
-/* stylelint-disable-next-line no-descending-specificity */
 .network-dim-cell {
   color: var(--sys-color-token-subtle);
 }
@@ -356,8 +349,8 @@
   font-weight: normal;
   padding: 0 4px;
 }
+
 /* All network-waterfall-header rules are defined here instead of above */
-/* stylelint-disable-next-line no-descending-specificity */
 .network-waterfall-header .sort-order-icon-container {
   position: absolute;
   top: 1px;
@@ -410,9 +403,6 @@
     color: linktext;
   }
 
-  /* This is part of the large color block declared above, but should not be
-   extracted out. */
-  /* stylelint-disable no-descending-specificity */
   .network-log-grid.data-grid tbody tr.revealed.selected,
   .network-log-grid.data-grid:focus-within tbody tr.revealed.selected,
   .network-log-grid.data-grid:focus-within tr.selected .network-dim-cell,
@@ -422,7 +412,6 @@
   .network-waterfall-header:hover * {
     color: HighlightText;
   }
-  /* stylelint-enable no-descending-specificity */
 
   .network-log-grid {
     --color-grid-default: canvas;
