[Freestyler] Render floating button on hover & on the right side
Drive-by:
* Fix dark mode appearance by adding border.

Fixed: 369335943
Change-Id: I5890e5f86d15d5663cfbb8767389eb4c22ddd203
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5913653
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/elements/elementsTreeOutline.css
+++ b/front_end/panels/elements/elementsTreeOutline.css
@@ -90,9 +90,13 @@
   max-height: var(--sys-size-6);
   vertical-align: top;
   margin-top: -1px;
+  position: absolute;
+  right: var(--sys-size-3);
+  bottom: 5px;
+  z-index: 999;
 }
 
-.elements-disclosure .elements-tree-outline:not(.hide-selection-when-blurred) li.selected .ai-button-container {
+.elements-disclosure .elements-tree-outline:not(.hide-selection-when-blurred) li.hovered .ai-button-container {
   display: inline-flex;
 }
 
