--- a/front_end/ui/components/floating_button/floatingButton.css
+++ b/front_end/ui/components/floating_button/floatingButton.css
@@ -24,6 +24,10 @@
   justify-content: center;
   align-items: center;
 
+  :host-context(.theme-with-dark-background) & {
+    border: 1px solid var(--sys-color-neutral-outline);
+  }
+
   & .icon {
     width: var(--sys-size-7);
     height: var(--sys-size-7);
