--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -27,6 +27,12 @@
       font: var(--sys-typescale-body4-medium);
     }
   }
+
+  &:focus-within {
+    outline: var(--sys-size-1) solid var(--sys-color-primary); /* stylelint-disable-line plugin/use_theme_colors */
+    /* TODO(crbug.com/371989111) fix use_theme_colors so it does not
+     * incorrectly fail on this. */
+  }
 }
 
 .insight-hover-icon {
