[RPP] Add table to cluster details
https://screenshot.googleplex.com/AmYkGLEnQtqSFGH

Bug:371594928
Change-Id: Ib7efad142399e0a90b4ad08a50310e54efee188c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5909793
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/components/layoutShiftDetails.css
+++ b/front_end/panels/timeline/components/layoutShiftDetails.css
@@ -104,3 +104,11 @@
   display: flex;
   flex-direction: column;
 }
+
+.shift-row:not(:last-child) {
+  border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
+}
+
+.total-row {
+  font: var(--sys-typescale-body4-medium);
+}
