[console] Remove the white background for focused console links
Bug: 371959043
Change-Id: I2211eb8549ecd8795de2f5f3ad50f93483c1132e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5912901
Reviewed-by: Eric Leese <leese@chromium.org>
Commit-Queue: Eric Leese <leese@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -355,6 +355,10 @@
   word-break: break-all;
 }
 
+#console-messages .devtools-link:focus-visible {
+  background-color: transparent;
+}
+
 #console-messages .resource-links {
   margin-top: -1px;
   margin-bottom: -2px;
