[Freestyler] Use consistent with adorner outline styles in floating button
Bug: none
Change-Id: I2137f86c1dd86989d913722221640d3742cb52aa
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5912902
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/ui/components/floating_button/floatingButton.css
+++ b/front_end/ui/components/floating_button/floatingButton.css
@@ -53,8 +53,8 @@
   }
 
   &:focus-visible {
-    outline: 1px solid var(--sys-color-primary);
-    border-color: var(--sys-color-primary);
+    outline: 2px solid var(--sys-color-state-focus-ring);
+    outline-offset: 2px;
   }
 
   &:disabled .icon {
