Make markdown-link underline styling configurable
In the usage of this component in the Performance Panel, we would like
to have underlines on by default. This CL introduces a CSS variable that
the owner can set to override the default state.

Fixed: 372090738
Change-Id: I5c8b025849811949fbc91431139126fcaedf6446
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5914259
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -4,6 +4,10 @@
  * found in the LICENSE file.
  */
 
+:host {
+  --markdown-link-text-decoration-style: underline;
+}
+
 .insight {
   display: block;
   position: relative;
