--- a/front_end/ui/components/markdown_view/markdownLink.css
+++ b/front_end/ui/components/markdown_view/markdownLink.css
@@ -7,7 +7,7 @@
 .devtools-link {
   color: var(--sys-color-primary);
   outline-offset: 2px;
-  text-decoration: none;
+  text-decoration: var(--markdown-link-text-decoration-style, none);
 }
 
 .devtools-link:hover {
