Insights: improvements to a11y of links
This CL improves the a11y of links within the sidebar by turning them
into buttons, which are focusable + fire the click on "enter" by
default.

It also fixes the interactivity with the toggle icon by:

1. Making the toggle icon inert, so it doesn't take user events or
   appear in the a11y tree (which is fine for us; any time the user
   clicks on it it fires a click on the header element which is where
   the toggle behaviour is).
2. Adds a keydown handler to allow Enter+Space to toggle the insight
   expansion state.
3. Makes each insight header keyboard focusable.

Fixed: 372086700, 372092783, 372085384, 372084952
Change-Id: I0a7e58b57db0142b343412d2a74ba4862206f879
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5914255
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -172,6 +172,11 @@ ul.insight-icon-results {
   cursor: pointer;
   text-decoration: underline;
   color: var(--sys-color-primary);
+  /* for a11y reasons this is a button, so we have to remove some default
+   * styling */
+  background: none;
+  border: none;
+  padding: 0;
 }
 
 .devtools-link.invalid-link {
