[Freestyler] Fix opt-in view
Fix regression caused by CL
https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5907819

Bug: none
Change-Id: I40f1a130b7ae8832521160998eae919a8515266b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5913099
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -428,6 +428,12 @@
   cursor: pointer;
 }
 
+button.link {
+  border: none;
+  background: none;
+  font: inherit;
+}
+
 .select-an-element-text {
   margin-left: 2px;
 }
