Fix use_theme_colors check with `outline` properties
Fixed: 371989111
Change-Id: Ib05081d71f93fa4ebb7fd787b6067ac30154a479
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5912682
Commit-Queue: Andres Olivares <andoli@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Andres Olivares <andoli@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -33,9 +33,7 @@
   }
 
   &:focus-within {
-    outline: var(--sys-size-1) solid var(--sys-color-primary); /* stylelint-disable-line plugin/use_theme_colors */
-    /* TODO(crbug.com/371989111) fix use_theme_colors so it does not
-     * incorrectly fail on this. */
+    outline: var(--sys-size-1) solid var(--sys-color-primary);
   }
 }
 
