RPP: Create Shift Viz to visualize layout shifts
Hovering a layout shift diamond or a row within details will show the
tooltip with an animated visualization of that layout shift. The animation is done with Web Animation's animate() method for extra control.

Demo video: https://misty-lettuce.surge.sh/Google_Chrome_for_Testing_2024-10-06_Sunday_08-57_PM.webm

Auxiliary addition: Appenders can now return an additionalElement to highlightedEntryInfo that'll be appended to the tooltip.

Also added `findNextEventAfterTimestamp` and `findNextEventAfterTimestamp` to Helpers.

This CL works especially great on top of crrev.com/c/5909793.

Bug: 371879012
Change-Id: Ida3b1d9a4a8394e41199130d73aa3be2f2f6a5ba
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5911522
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/layoutShiftDetails.css
+++ b/front_end/panels/timeline/components/layoutShiftDetails.css
@@ -42,6 +42,7 @@
   text-align: left;
   border-block: var(--sys-size-1) solid var(--sys-color-divider);
   border-collapse: collapse;
+  font-variant-numeric: tabular-nums;
 
   th,
   td {
