--- a/front_end/panels/timeline/components/layoutShiftDetails.css
+++ b/front_end/panels/timeline/components/layoutShiftDetails.css
@@ -9,7 +9,7 @@
   border: var(--sys-size-1) solid var(--sys-color-primary);
   border-radius: var(--sys-shape-corner-extra-small);
   display: flex;
-  margin-left: var(--sys-size-3);
+  margin-top: var(--sys-size-4);
   padding: var(--sys-size-2) var(--sys-size-4) var(--sys-size-2) var(--sys-size-4);
   width: max-content;
   white-space: pre;
@@ -97,7 +97,8 @@
 .layout-shift-cluster-summary-details {
   font: var(--sys-typescale-body4-regular);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  column-gap: var(--sys-size-4);
   padding: var(--sys-size-6) var(--sys-size-6) 0 var(--sys-size-6);
 }
 
