--- a/front_end/panels/timeline/timelineHistoryManager.css
+++ b/front_end/panels/timeline/timelineHistoryManager.css
@@ -19,6 +19,10 @@
   padding: 6px 10px;
   position: relative;
 
+  .time {
+    margin-left: 3px;
+  }
+
   /* done this way because if we have a border it
    * awkwardly merges in a diagonal with the top and
    * bottom border */
