[RPP] Adjust font sizes to match mocks
https://i.imgur.com/OyxP5MR.png

Bug: 372265319
Change-Id: Ibde6324870f1ce114767228bc599e0b53c946bc5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5917101
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -148,7 +148,7 @@ dd.dl-title {
 }
 
 .insight-savings {
-  font-weight: var(--ref-typeface-weight-bold);
+  font: var(--sys-typescale-body4-medium);
   color: var(--sys-color-green);
 }
 
