RPP: Move hardwareConcurrency emulation to Sensors
And change Performance settings pane layout from 3 to 2 columns

Bug:371463665
Change-Id: I8f1b6e791c9c86a03485564197040962b4ce0b1b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5908530
Auto-Submit: Paul Irish <paulirish@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/sensors/sensors.css
+++ b/front_end/panels/sensors/sensors.css
@@ -35,6 +35,22 @@
   max-width: 120px;
 }
 
+.concurrency-details {
+  margin: var(--sys-size-5) var(--sys-size-10);
+  display: flex;
+  align-items: center;
+}
+
+.concurrency-details input {
+  width: 50px;
+  /* Clear out unexpected margin applied to `.sensors-view input` */
+  margin: 0;
+}
+
+.concurrency-hidden {
+  visibility: hidden;
+}
+
 .sensors-view input:focus::-webkit-input-placeholder {
   color: transparent !important; /* stylelint-disable-line declaration-no-important */
 }
