[GM3Restyling] Fix broken focus ring for toolbar dropdowns.
Fixed: 372159481
Change-Id: I4c312fa372b5c7f03162c9bc66c1bce5f7f5a8ea
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5917827
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -163,6 +163,10 @@ select.toolbar-item:disabled + .toolbar-dropdown-arrow {
     background-color: var(--sys-color-state-disabled-container);
     color: var(--sys-color-state-disabled);
   }
+
+  &:first-child {
+    margin-left: var(--sys-size-2);
+  }
 }
 
 .toolbar-has-dropdown-shrinkable {
