Insights: tweak focus behaviour of sidebar insights
1. Changed the `outline` to only show when the insight is closed. When
   the insight is open it is obvious (as you can only have one open at
   once), and as the user focuses through the insight's contents or
   header, there is an outline shown on those. So we don't need an
   additional outline on the entire body.
2. Made the icon appear when the header is focused as another hint to
   users that they can expand/collapse the contents (it is also
   aria-labelled so those who cannot see the icon are still able to use
   it).

Bug: 372084952
Change-Id: Iba39295528045bbd976a91ffc0dff2ad3ea14f13
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5917833
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -22,6 +22,11 @@
   &.closed {
     background-color: var(--sys-color-surface3);
     border: none;
+
+    &:focus-within {
+      /* Ensure that if the user tabs to a closed insight, we outline it so they know it's focused. */
+      outline: var(--sys-size-1) solid var(--sys-color-primary);
+    }
   }
 
   header {
@@ -30,10 +35,6 @@
     h3 {
       font: var(--sys-typescale-body4-medium);
     }
-  }
-
-  &:focus-within {
-    outline: var(--sys-size-1) solid var(--sys-color-primary);
   }
 }
 
@@ -51,7 +52,9 @@
   opacity: 0%;
   transition: opacity 0.2s ease;
 
-  .insight:hover & {
+  /* Ensure that the icon appears when the user hovers, or focuses the header */
+  .insight:hover &,
+  header:focus-within & {
     opacity: 100%;
   }
 
