[Freestyler] Update `copy` button behavior to move the copy button & show simple text
Fixed: 372292899
Change-Id: I2fae9655ac2a38513a1175cec81ff20344b8b263
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5917786
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/components/markdown_view/codeBlock.css
+++ b/front_end/ui/components/markdown_view/codeBlock.css
@@ -69,36 +69,14 @@
   flex: 1;
 }
 
-.codeblock .copy {
-  padding: var(--sys-size-3) 0;
-  align-items: center;
+.codeblock .copy-button-container {
   display: flex;
-}
-
-.codeblock .copy-button {
-  margin: 0;
-  padding: 0;
-  background: transparent;
-  border: none;
-  font-size: 11px;
-  line-height: 16px;
-  display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  gap: var(--sys-size-3);
+  font-size: var(--sys-typescale-body5-size);
 
-  devtools-icon {
-    width: var(--sys-size-8);
-    height: var(--sys-size-8);
-    color: var(--icon-default);
-  }
-}
-
-.codeblock .copy-button.copied {
-  color: var(--sys-color-primary);
-
-  devtools-icon {
-    color: var(--sys-color-primary);
+  span {
+    padding-right: var(--sys-size-4);
   }
 }
 
